objects/simpli_lv__List_View_Error__c.object
<CustomObject>
    <fields>
        <fullName>simpli_lv__Message__c</fullName>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>simpli_lv__Running_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The running user at the time of the error.</description>
        <inlineHelpText>The running user at the time of the error.</inlineHelpText>
        <label>Running User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>List_View_Errors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>simpli_lv__Subtype__c</fullName>
        <label>Subtype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>simpli_lv__Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Exception</fullName>
                </value>
                <value>
                    <fullName>Log</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>List View Log</label>
    <listViews>
        <fullName>simpli_lv__All</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>simpli_lv__Running_User__c</columns>
        <columns>simpli_lv__Type__c</columns>
        <columns>simpli_lv__Subtype__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>simpli_lv__All_Exceptions_Today</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>simpli_lv__Running_User__c</columns>
        <columns>simpli_lv__Type__c</columns>
        <columns>simpli_lv__Subtype__c</columns>
        <columns>simpli_lv__Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>simpli_lv__Type__c</field>
            <operation>equals</operation>
            <value>Exception</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All Exceptions (Today)</label>
    </listViews>
    <listViews>
        <fullName>simpli_lv__All_Logging_Today</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>simpli_lv__Running_User__c</columns>
        <columns>simpli_lv__Type__c</columns>
        <columns>simpli_lv__Subtype__c</columns>
        <columns>simpli_lv__Message__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>simpli_lv__Type__c</field>
            <operation>equals</operation>
            <value>Log</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All Logging (Today)</label>
    </listViews>
    <nameField>
        <displayFormat>LVE-{0}</displayFormat>
        <label>List View Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>List View Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>